--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+DATABASE_HOST=
+PORT=
 
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+CACHE_ENABLED=
+CACHE_LOCATION=
