--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ click-repl==0.3.0
 cron-descriptor==1.4.3
 decorator==5.1.1
 Django==5.0.4
+django-appconf==1.0.6
 django-celery-beat==2.6.0
 django-redis==5.4.0
+django-select2==8.1.2
 django-timezone-field==6.1.0
 executing==2.0.1
 idna==3.7
@@ -33,6 +35,7 @@ Pygments==2.17.2
 python-crontab==3.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytils==0.4.1
 redis==5.0.3
 requests==2.31.0
 six==1.16.0
