--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,13 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: redis
     restart: always
     ports:
       - "6379:6379"
   db:
     image: postgres
+    container_name: db
     restart: always
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
